[gd_scene load_steps=22 format=2]

[ext_resource path="res://components/espremedor.gd" type="Script" id=1]
[ext_resource path="res://components/toque_deslize.gd" type="Script" id=2]
[ext_resource path="res://src/Jogador/Jogador.gd" type="Script" id=3]
[ext_resource path="res://assets/spritesheet_50x50.png" type="Texture" id=4]
[ext_resource path="res://components/pular.gd" type="Script" id=5]
[ext_resource path="res://assets/monogram.ttf" type="DynamicFontData" id=6]

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 200, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 200, 350, 50, 50 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 200, 300, 50, 50 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 200, 250, 50, 50 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 200, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 200, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 200, 150, 50, 50 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 200, 200, 50, 50 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 100, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 50, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 50, 50 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 25 ), SubResource( 24 ), SubResource( 23 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "agir",
"speed": 15.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "correr",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=17]

[sub_resource type="DynamicFont" id=26]
size = 60
font_data = ExtResource( 6 )

[node name="Jogador" type="Node2D"]
script = ExtResource( 3 )

[node name="ToqueDeslize" type="Node" parent="."]
script = ExtResource( 2 )

[node name="SpriteJogador" type="AnimatedSprite" parent="."]
position = Vector2( 0, -40 )
scale = Vector2( 2, 2 )
frames = SubResource( 13 )
animation = "correr"
frame = 2
playing = true

[node name="Espremedor" type="Node" parent="."]
script = ExtResource( 1 )
tempo_espremido = 0.4
tempo_espremindo = 0.08

[node name="Pular" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -5 )
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 17 )

[node name="Pontos" type="Node2D" parent="."]
position = Vector2( 0, -200 )

[node name="Pontos" type="Label" parent="Pontos"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 26 )
text = "0"

[connection signal="deslizar" from="ToqueDeslize" to="." method="_on_ToqueDeslize_deslizar"]
[connection signal="desespremido" from="Espremedor" to="." method="_on_Espremedor_desespremido"]
[connection signal="caiu" from="Pular" to="." method="_on_Pular_caiu"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
